Fix astronaut visibility and change body font to Ubuntu Mono

--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,6 @@
 .home {
 	position: relative;
 	color: white;
-	/* background-color: rgb(32, 35, 41); */
 	background-image: url("../assets/background.jpg");
 	background-attachment: fixed;
 	background-position: center;
@@ -12,14 +11,14 @@
 }
 
 .greetings {
-	font-size: 57px;
+	font-size: 55px;
 	margin-bottom: 30px;
 	z-index: 100;
 }
 
 .introduction {
 	color: #e2e0e0;
-	font-size: 43px;
+	font-size: 45px;
 	z-index: 100;
 }
 
@@ -28,8 +27,8 @@
 	opacity: 1;
 	bottom: 35px;
 	left: 35px;
-	width: 300px;
-	height: 350px;
+	width: 250px;
+	height: 300px;
 }
 
 @media screen and (max-width: 586px) {
@@ -41,7 +40,13 @@
 	}
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 600px) {
+	.astronaut {
+		visibility: hidden;
+	}
+}
+
+@media screen and (max-width: 400px) {
 	.astronaut {
 		visibility: hidden;
 	}
